@@ -2086,84 +2086,6 @@ RIC;
 	$tpl->assign('PURCHASE_FOOTER', $footer);
 }
 
-
-function send_tickets_msg($to_id, $from_id, $ticket_subject, $ticket_message, $ticket_status, $urgency) {
-	$sql = Database::getInstance();
-	global $admin_login;
-	// To information
-	$query = "SELECT `fname`, `lname`, `email`, `admin_name` FROM `admin` WHERE `admin_id` = ?";
-
-	$res = exec_query($sql, $query, $to_id);
-	$to_email = $res->fields['email'];
-	$to_fname = $res->fields['fname'];
-	$to_lname = $res->fields['lname'];
-	$to_uname = $res->fields['admin_name'];
-	// From information
-	$query = "SELECT `fname`, `lname`, `email`, `admin_name` FROM `admin` WHERE `admin_id` = ?";
-
-	$res = exec_query($sql, $query, $from_id);
-	$from_email = $res->fields['email'];
-	$from_fname = $res->fields['fname'];
-	$from_lname = $res->fields['lname'];
-	$from_uname = $res->fields['admin_name'];
-	// Prepare message
-	$subject = tr("[Ticket]") . " {SUBJ}";
-	if ($ticket_status == 0) {
-		$message = tr("Hello %s!\n\nYou have a new ticket:\n", "{TO_NAME}");
-	} else {
-		$message = tr("Hello %s!\n\nYou have an answer for this ticket:\n", "{TO_NAME}");
-	}
-	$message .= "\n".tr("Priority: %s\n", "{PRIORITY}");
-	$message .= "\n" . $ticket_message;
-	$message .= "\n\n" . tr("Log in to answer") . ' ' . Config::get('BASE_SERVER_VHOST_PREFIX') . Config::get('BASE_SERVER_VHOST');
-
-	// Format addresses
-	if ($from_fname && $from_lname) {
-		$from = '"' . encode($from_fname . ' ' . $from_lname) . "\" <" . $from_email . ">";
-		$fromname = "$from_fname $from_lname";
-	} else {
-		$from = $from_email;
-		$fromname = $from_uname;
-	}
-
-	if ($to_fname && $to_lname) {
-		$to = '"' . encode($to_fname . ' ' . $to_lname) . "\" <" . $to_email . ">";
-		$toname = "$to_fname $to_lname";
-	} else {
-		$toname = $to_uname;
-		$to = $to_email;
-	}
-
-	$priority = get_ticket_urgency($urgency);
-
-	// Prepare and send mail
-	$search = array();
-	$replace = array();
-
-	$search [] = '{SUBJ}';
-	$replace[] = $ticket_subject;
-	$search [] = '{TO_NAME}';
-	$replace[] = $toname;
-	$search [] = '{FROM_NAME}';
-	$replace[] = $fromname;
-	$search [] = '{PRIORITY}';
-	$replace[] = $priority;
-
-	$subject = str_replace($search, $replace, $subject);
-	$message = str_replace($search, $replace, $message);
-
-	$headers = "From: " . $from . "\n";
-
-	$headers .= "MIME-Version: 1.0\nContent-Type: text/plain; charset=utf-8\nContent-Transfer-Encoding: 8bit\n";
-
-	$headers .= "X-Mailer: ispCP " . Config::get('Version') . " Tickets Mailer";
-
-	$mail_result = mail($to, encode($subject), $message, $headers);
-	$mail_status = ($mail_result) ? 'OK' : 'NOT OK';
-	write_log(sprintf("%s send ticket To: %s, From: %s, Status: %s!", $_SESSION['user_logged'], $toname . ": " . $to_email, $fromname . ": " . $from_email, $mail_status));
-}
-
-
 function setConfig_Value($name, $value) {
 	$sql = Database::getInstance();
 
